force-app/main/default/objects/Nationality_Master__mdt/Nationality_Master__mdt.object-meta.xml
<CustomObject>
    <label>Nationality Master</label>
    <pluralLabel>Nationality Masters</pluralLabel>
</CustomObject>