force-app/main/default/objects/Nationality_Master__mdt/fields/Nationality_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Full_Name__c</fullName>
    <label>Nationality Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>