force-app/main/default/objects/Nationality_Master__mdt/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <label>Sub Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>